parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    THEN
    CONST
    DIV_ASSIGN
    ADD_ASSIGN
    SUB_ASSIGN
    MOD_ASSIGN
    MUL_ASSIGN

Grammar

Rule 0     S' -> program
Rule 1     program -> external_declaration
Rule 2     program -> program external_declaration
Rule 3     external_declaration -> declaration
Rule 4     external_declaration -> EXTERN declaration
Rule 5     external_declaration -> function-definition
Rule 6     function-definition -> type function_declarator compound_instruction
Rule 7     declaration -> type declarator_list SEMI_COL
Rule 8     type -> INT
Rule 9     type -> STRING
Rule 10    declarator_list -> declarator
Rule 11    declarator_list -> declarator_list COMMA declarator
Rule 12    declaration_list -> declaration
Rule 13    declaration_list -> declaration_list declaration
Rule 14    declarator -> IDENT
Rule 15    declarator -> function_declarator
Rule 16    function_declarator -> IDENT L_PARENTHESIS R_PARENTHESIS
Rule 17    function_declarator -> IDENT L_PARENTHESIS parameter_list R_PARENTHESIS
Rule 18    parameter_list -> parameter_declaration
Rule 19    parameter_list -> parameter_list COMMA parameter_declaration
Rule 20    parameter_declaration -> type IDENT
Rule 21    instruction -> SEMI_COL
Rule 22    instruction -> compound_instruction
Rule 23    instruction -> expression_instruction
Rule 24    instruction -> iteration_instruction
Rule 25    instruction -> select_instruction
Rule 26    instruction -> jump_instruction
Rule 27    expression_instruction -> expression SEMI_COL
Rule 28    expression_instruction -> assignment SEMI_COL
Rule 29    assignment -> IDENT ASSIGNMENT expression
Rule 30    compound_instruction -> block_start declaration_list instruction_list block_end
Rule 31    compound_instruction -> block_start declaration_list block_end
Rule 32    compound_instruction -> block_start instruction_list block_end
Rule 33    compound_instruction -> block_start block_end
Rule 34    block_start -> LEFT_BRACKET
Rule 35    block_end -> RIGHT_BRACKET
Rule 36    instruction_list -> instruction
Rule 37    instruction_list -> instruction_list instruction
Rule 38    select_instruction -> cond_instruction instruction
Rule 39    select_instruction -> cond_instruction instruction ELSE instruction
Rule 40    cond_instruction -> IF L_PARENTHESIS condition R_PARENTHESIS
Rule 41    iteration_instruction -> WHILE L_PARENTHESIS condition R_PARENTHESIS instruction
Rule 42    iteration_instruction -> DO instruction WHILE L_PARENTHESIS condition R_PARENTHESIS
Rule 43    iteration_instruction -> FOR L_PARENTHESIS assignment SEMI_COL condition SEMI_COL assignment R_PARENTHESIS instruction
Rule 44    jump_instruction -> RETURN expression SEMI_COL
Rule 45    condition -> expression comparison_operator expression
Rule 46    comparison_operator -> EGAL
Rule 47    comparison_operator -> DIFF
Rule 48    comparison_operator -> INF
Rule 49    comparison_operator -> SUP
Rule 50    comparison_operator -> INFEQUAL
Rule 51    comparison_operator -> SUPEQUAL
Rule 52    expression -> expression_additive
Rule 53    expression -> expression SHIFTLEFT expression_additive
Rule 54    expression -> expression SHIFTRIGHT expression_additive
Rule 55    expression_additive -> expression_multiplicative
Rule 56    expression_additive -> expression_additive PLUS expression_multiplicative
Rule 57    expression_additive -> expression_additive MINUS expression_multiplicative
Rule 58    expression_multiplicative -> unary_expression
Rule 59    expression_multiplicative -> expression_multiplicative MULTI unary_expression
Rule 60    expression_multiplicative -> expression_multiplicative DIV unary_expression
Rule 61    expression_multiplicative -> expression_multiplicative MODULO unary_expression
Rule 62    unary_expression -> postfix_expression
Rule 63    unary_expression -> MINUS unary_expression
Rule 64    postfix_expression -> primary_expression
Rule 65    postfix_expression -> IDENT L_PARENTHESIS argument_expression_list R_PARENTHESIS
Rule 66    postfix_expression -> IDENT L_PARENTHESIS R_PARENTHESIS
Rule 67    argument_expression_list -> expression
Rule 68    argument_expression_list -> argument_expression_list COMMA expression
Rule 69    primary_expression -> IDENT
Rule 70    primary_expression -> CONST_INT
Rule 71    primary_expression -> CONST_STRING
Rule 72    primary_expression -> L_PARENTHESIS expression R_PARENTHESIS

Terminals, with rules where they appear

ADD_ASSIGN           : 
ASSIGNMENT           : 29
COMMA                : 11 19 68
CONST                : 
CONST_INT            : 70
CONST_STRING         : 71
DIFF                 : 47
DIV                  : 60
DIV_ASSIGN           : 
DO                   : 42
EGAL                 : 46
ELSE                 : 39
EXTERN               : 4
FOR                  : 43
IDENT                : 14 16 17 20 29 65 66 69
IF                   : 40
INF                  : 48
INFEQUAL             : 50
INT                  : 8
LEFT_BRACKET         : 34
L_PARENTHESIS        : 16 17 40 41 42 43 65 66 72
MINUS                : 57 63
MODULO               : 61
MOD_ASSIGN           : 
MULTI                : 59
MUL_ASSIGN           : 
PLUS                 : 56
RETURN               : 44
RIGHT_BRACKET        : 35
R_PARENTHESIS        : 16 17 40 41 42 43 65 66 72
SEMI_COL             : 7 21 27 28 43 43 44
SHIFTLEFT            : 53
SHIFTRIGHT           : 54
STRING               : 9
SUB_ASSIGN           : 
SUP                  : 49
SUPEQUAL             : 51
THEN                 : 
WHILE                : 41 42
error                : 

Nonterminals, with rules where they appear

argument_expression_list : 65 68
assignment           : 28 43 43
block_end            : 30 31 32 33
block_start          : 30 31 32 33
comparison_operator  : 45
compound_instruction : 6 22
cond_instruction     : 38 39
condition            : 40 41 42 43
declaration          : 3 4 12 13
declaration_list     : 13 30 31
declarator           : 10 11
declarator_list      : 7 11
expression           : 27 29 44 45 45 53 54 67 68 72
expression_additive  : 52 53 54 56 57
expression_instruction : 23
expression_multiplicative : 55 56 57 59 60 61
external_declaration : 1 2
function-definition  : 5
function_declarator  : 6 15
instruction          : 36 37 38 39 39 41 42 43
instruction_list     : 30 32 37
iteration_instruction : 24
jump_instruction     : 26
parameter_declaration : 18 19
parameter_list       : 17 19
postfix_expression   : 62
primary_expression   : 64
program              : 2 0
select_instruction   : 25
type                 : 6 7 20
unary_expression     : 58 59 60 61 63

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . external_declaration
    (2) program -> . program external_declaration
    (3) external_declaration -> . declaration
    (4) external_declaration -> . EXTERN declaration
    (5) external_declaration -> . function-definition
    (7) declaration -> . type declarator_list SEMI_COL
    (6) function-definition -> . type function_declarator compound_instruction
    (8) type -> . INT
    (9) type -> . STRING

    EXTERN          shift and go to state 7
    INT             shift and go to state 3
    STRING          shift and go to state 2

    external_declaration           shift and go to state 1
    program                        shift and go to state 4
    function-definition            shift and go to state 5
    declaration                    shift and go to state 6
    type                           shift and go to state 8

state 1

    (1) program -> external_declaration .

    EXTERN          reduce using rule 1 (program -> external_declaration .)
    INT             reduce using rule 1 (program -> external_declaration .)
    STRING          reduce using rule 1 (program -> external_declaration .)
    $end            reduce using rule 1 (program -> external_declaration .)


state 2

    (9) type -> STRING .

    IDENT           reduce using rule 9 (type -> STRING .)


state 3

    (8) type -> INT .

    IDENT           reduce using rule 8 (type -> INT .)


state 4

    (0) S' -> program .
    (2) program -> program . external_declaration
    (3) external_declaration -> . declaration
    (4) external_declaration -> . EXTERN declaration
    (5) external_declaration -> . function-definition
    (7) declaration -> . type declarator_list SEMI_COL
    (6) function-definition -> . type function_declarator compound_instruction
    (8) type -> . INT
    (9) type -> . STRING

    EXTERN          shift and go to state 7
    INT             shift and go to state 3
    STRING          shift and go to state 2

    external_declaration           shift and go to state 9
    function-definition            shift and go to state 5
    declaration                    shift and go to state 6
    type                           shift and go to state 8

state 5

    (5) external_declaration -> function-definition .

    EXTERN          reduce using rule 5 (external_declaration -> function-definition .)
    INT             reduce using rule 5 (external_declaration -> function-definition .)
    STRING          reduce using rule 5 (external_declaration -> function-definition .)
    $end            reduce using rule 5 (external_declaration -> function-definition .)


state 6

    (3) external_declaration -> declaration .

    EXTERN          reduce using rule 3 (external_declaration -> declaration .)
    INT             reduce using rule 3 (external_declaration -> declaration .)
    STRING          reduce using rule 3 (external_declaration -> declaration .)
    $end            reduce using rule 3 (external_declaration -> declaration .)


state 7

    (4) external_declaration -> EXTERN . declaration
    (7) declaration -> . type declarator_list SEMI_COL
    (8) type -> . INT
    (9) type -> . STRING

    INT             shift and go to state 3
    STRING          shift and go to state 2

    type                           shift and go to state 11
    declaration                    shift and go to state 10

state 8

    (7) declaration -> type . declarator_list SEMI_COL
    (6) function-definition -> type . function_declarator compound_instruction
    (10) declarator_list -> . declarator
    (11) declarator_list -> . declarator_list COMMA declarator
    (16) function_declarator -> . IDENT L_PARENTHESIS R_PARENTHESIS
    (17) function_declarator -> . IDENT L_PARENTHESIS parameter_list R_PARENTHESIS
    (14) declarator -> . IDENT
    (15) declarator -> . function_declarator

    IDENT           shift and go to state 12

    function_declarator            shift and go to state 13
    declarator                     shift and go to state 14
    declarator_list                shift and go to state 15

state 9

    (2) program -> program external_declaration .

    EXTERN          reduce using rule 2 (program -> program external_declaration .)
    INT             reduce using rule 2 (program -> program external_declaration .)
    STRING          reduce using rule 2 (program -> program external_declaration .)
    $end            reduce using rule 2 (program -> program external_declaration .)


state 10

    (4) external_declaration -> EXTERN declaration .

    EXTERN          reduce using rule 4 (external_declaration -> EXTERN declaration .)
    INT             reduce using rule 4 (external_declaration -> EXTERN declaration .)
    STRING          reduce using rule 4 (external_declaration -> EXTERN declaration .)
    $end            reduce using rule 4 (external_declaration -> EXTERN declaration .)


state 11

    (7) declaration -> type . declarator_list SEMI_COL
    (10) declarator_list -> . declarator
    (11) declarator_list -> . declarator_list COMMA declarator
    (14) declarator -> . IDENT
    (15) declarator -> . function_declarator
    (16) function_declarator -> . IDENT L_PARENTHESIS R_PARENTHESIS
    (17) function_declarator -> . IDENT L_PARENTHESIS parameter_list R_PARENTHESIS

    IDENT           shift and go to state 16

    function_declarator            shift and go to state 17
    declarator                     shift and go to state 14
    declarator_list                shift and go to state 15

state 12

    (16) function_declarator -> IDENT . L_PARENTHESIS R_PARENTHESIS
    (17) function_declarator -> IDENT . L_PARENTHESIS parameter_list R_PARENTHESIS
    (14) declarator -> IDENT .

    L_PARENTHESIS   shift and go to state 18
    SEMI_COL        reduce using rule 14 (declarator -> IDENT .)
    COMMA           reduce using rule 14 (declarator -> IDENT .)


state 13

    (6) function-definition -> type function_declarator . compound_instruction
    (15) declarator -> function_declarator .
    (30) compound_instruction -> . block_start declaration_list instruction_list block_end
    (31) compound_instruction -> . block_start declaration_list block_end
    (32) compound_instruction -> . block_start instruction_list block_end
    (33) compound_instruction -> . block_start block_end
    (34) block_start -> . LEFT_BRACKET

    SEMI_COL        reduce using rule 15 (declarator -> function_declarator .)
    COMMA           reduce using rule 15 (declarator -> function_declarator .)
    LEFT_BRACKET    shift and go to state 21

    compound_instruction           shift and go to state 19
    block_start                    shift and go to state 20

state 14

    (10) declarator_list -> declarator .

    SEMI_COL        reduce using rule 10 (declarator_list -> declarator .)
    COMMA           reduce using rule 10 (declarator_list -> declarator .)


state 15

    (7) declaration -> type declarator_list . SEMI_COL
    (11) declarator_list -> declarator_list . COMMA declarator

    SEMI_COL        shift and go to state 22
    COMMA           shift and go to state 23


state 16

    (14) declarator -> IDENT .
    (16) function_declarator -> IDENT . L_PARENTHESIS R_PARENTHESIS
    (17) function_declarator -> IDENT . L_PARENTHESIS parameter_list R_PARENTHESIS

    SEMI_COL        reduce using rule 14 (declarator -> IDENT .)
    COMMA           reduce using rule 14 (declarator -> IDENT .)
    L_PARENTHESIS   shift and go to state 18


state 17

    (15) declarator -> function_declarator .

    SEMI_COL        reduce using rule 15 (declarator -> function_declarator .)
    COMMA           reduce using rule 15 (declarator -> function_declarator .)


state 18

    (16) function_declarator -> IDENT L_PARENTHESIS . R_PARENTHESIS
    (17) function_declarator -> IDENT L_PARENTHESIS . parameter_list R_PARENTHESIS
    (18) parameter_list -> . parameter_declaration
    (19) parameter_list -> . parameter_list COMMA parameter_declaration
    (20) parameter_declaration -> . type IDENT
    (8) type -> . INT
    (9) type -> . STRING

    R_PARENTHESIS   shift and go to state 26
    INT             shift and go to state 3
    STRING          shift and go to state 2

    parameter_declaration          shift and go to state 25
    type                           shift and go to state 27
    parameter_list                 shift and go to state 24

state 19

    (6) function-definition -> type function_declarator compound_instruction .

    EXTERN          reduce using rule 6 (function-definition -> type function_declarator compound_instruction .)
    INT             reduce using rule 6 (function-definition -> type function_declarator compound_instruction .)
    STRING          reduce using rule 6 (function-definition -> type function_declarator compound_instruction .)
    $end            reduce using rule 6 (function-definition -> type function_declarator compound_instruction .)


state 20

    (30) compound_instruction -> block_start . declaration_list instruction_list block_end
    (31) compound_instruction -> block_start . declaration_list block_end
    (32) compound_instruction -> block_start . instruction_list block_end
    (33) compound_instruction -> block_start . block_end
    (12) declaration_list -> . declaration
    (13) declaration_list -> . declaration_list declaration
    (36) instruction_list -> . instruction
    (37) instruction_list -> . instruction_list instruction
    (35) block_end -> . RIGHT_BRACKET
    (7) declaration -> . type declarator_list SEMI_COL
    (21) instruction -> . SEMI_COL
    (22) instruction -> . compound_instruction
    (23) instruction -> . expression_instruction
    (24) instruction -> . iteration_instruction
    (25) instruction -> . select_instruction
    (26) instruction -> . jump_instruction
    (8) type -> . INT
    (9) type -> . STRING
    (30) compound_instruction -> . block_start declaration_list instruction_list block_end
    (31) compound_instruction -> . block_start declaration_list block_end
    (32) compound_instruction -> . block_start instruction_list block_end
    (33) compound_instruction -> . block_start block_end
    (27) expression_instruction -> . expression SEMI_COL
    (28) expression_instruction -> . assignment SEMI_COL
    (41) iteration_instruction -> . WHILE L_PARENTHESIS condition R_PARENTHESIS instruction
    (42) iteration_instruction -> . DO instruction WHILE L_PARENTHESIS condition R_PARENTHESIS
    (43) iteration_instruction -> . FOR L_PARENTHESIS assignment SEMI_COL condition SEMI_COL assignment R_PARENTHESIS instruction
    (38) select_instruction -> . cond_instruction instruction
    (39) select_instruction -> . cond_instruction instruction ELSE instruction
    (44) jump_instruction -> . RETURN expression SEMI_COL
    (34) block_start -> . LEFT_BRACKET
    (52) expression -> . expression_additive
    (53) expression -> . expression SHIFTLEFT expression_additive
    (54) expression -> . expression SHIFTRIGHT expression_additive
    (29) assignment -> . IDENT ASSIGNMENT expression
    (40) cond_instruction -> . IF L_PARENTHESIS condition R_PARENTHESIS
    (55) expression_additive -> . expression_multiplicative
    (56) expression_additive -> . expression_additive PLUS expression_multiplicative
    (57) expression_additive -> . expression_additive MINUS expression_multiplicative
    (58) expression_multiplicative -> . unary_expression
    (59) expression_multiplicative -> . expression_multiplicative MULTI unary_expression
    (60) expression_multiplicative -> . expression_multiplicative DIV unary_expression
    (61) expression_multiplicative -> . expression_multiplicative MODULO unary_expression
    (62) unary_expression -> . postfix_expression
    (63) unary_expression -> . MINUS unary_expression
    (64) postfix_expression -> . primary_expression
    (65) postfix_expression -> . IDENT L_PARENTHESIS argument_expression_list R_PARENTHESIS
    (66) postfix_expression -> . IDENT L_PARENTHESIS R_PARENTHESIS
    (69) primary_expression -> . IDENT
    (70) primary_expression -> . CONST_INT
    (71) primary_expression -> . CONST_STRING
    (72) primary_expression -> . L_PARENTHESIS expression R_PARENTHESIS

    RIGHT_BRACKET   shift and go to state 34
    SEMI_COL        shift and go to state 38
    INT             shift and go to state 3
    STRING          shift and go to state 2
    WHILE           shift and go to state 35
    DO              shift and go to state 28
    FOR             shift and go to state 47
    RETURN          shift and go to state 30
    LEFT_BRACKET    shift and go to state 21
    IDENT           shift and go to state 44
    IF              shift and go to state 42
    MINUS           shift and go to state 37
    CONST_INT       shift and go to state 36
    CONST_STRING    shift and go to state 29
    L_PARENTHESIS   shift and go to state 40

    unary_expression               shift and go to state 31
    expression_additive            shift and go to state 32
    cond_instruction               shift and go to state 33
    postfix_expression             shift and go to state 39
    jump_instruction               shift and go to state 41
    type                           shift and go to state 11
    expression_instruction         shift and go to state 43
    block_end                      shift and go to state 45
    iteration_instruction          shift and go to state 46
    assignment                     shift and go to state 48
    instruction_list               shift and go to state 49
    primary_expression             shift and go to state 50
    declaration                    shift and go to state 51
    compound_instruction           shift and go to state 52
    instruction                    shift and go to state 53
    block_start                    shift and go to state 20
    declaration_list               shift and go to state 54
    select_instruction             shift and go to state 55
    expression                     shift and go to state 56
    expression_multiplicative      shift and go to state 57

state 21

    (34) block_start -> LEFT_BRACKET .

    RIGHT_BRACKET   reduce using rule 34 (block_start -> LEFT_BRACKET .)
    SEMI_COL        reduce using rule 34 (block_start -> LEFT_BRACKET .)
    INT             reduce using rule 34 (block_start -> LEFT_BRACKET .)
    STRING          reduce using rule 34 (block_start -> LEFT_BRACKET .)
    WHILE           reduce using rule 34 (block_start -> LEFT_BRACKET .)
    DO              reduce using rule 34 (block_start -> LEFT_BRACKET .)
    FOR             reduce using rule 34 (block_start -> LEFT_BRACKET .)
    RETURN          reduce using rule 34 (block_start -> LEFT_BRACKET .)
    LEFT_BRACKET    reduce using rule 34 (block_start -> LEFT_BRACKET .)
    IDENT           reduce using rule 34 (block_start -> LEFT_BRACKET .)
    IF              reduce using rule 34 (block_start -> LEFT_BRACKET .)
    MINUS           reduce using rule 34 (block_start -> LEFT_BRACKET .)
    CONST_INT       reduce using rule 34 (block_start -> LEFT_BRACKET .)
    CONST_STRING    reduce using rule 34 (block_start -> LEFT_BRACKET .)
    L_PARENTHESIS   reduce using rule 34 (block_start -> LEFT_BRACKET .)


state 22

    (7) declaration -> type declarator_list SEMI_COL .

    RIGHT_BRACKET   reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    SEMI_COL        reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    INT             reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    STRING          reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    WHILE           reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    DO              reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    FOR             reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    RETURN          reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    LEFT_BRACKET    reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    IDENT           reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    IF              reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    MINUS           reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    CONST_INT       reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    CONST_STRING    reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    L_PARENTHESIS   reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    EXTERN          reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)
    $end            reduce using rule 7 (declaration -> type declarator_list SEMI_COL .)


state 23
